# midi-graph

./: .gitignore  .gitpod.yml  ATTRIBUTION.md  CREDITS.md  Cargo.toml  README.md  audio.js  flake.nix  index.html  index.js  wasm-prepare.sh  wasm-run.sh  wasm-test.sh  wrun.sh
examples/: async.rs  automation.rs  chip.rs  custom.rs  demo.rs  filter.rs  fonts.rs  generator.rs  json.rs  lfo.rs  looping.rs  midi_control.rs  polyphony.rs  programs.rs  ron.rs  sampler.rs  sf2.rs  state_restore.rs
resources/: LoopingMidi.mid  MIDIGraphAutomationTest.mid  custom-example-subtree.json  demo-font.sf2  example.json  example.ron  json-example.json  sample-in-c.mid  simple.mid  subtree.json
src/: error.rs  event.rs  lib.rs  loader.rs  log.rs  tests.rs  wasm_demo.rs  wasm_tests.rs
src/config/: builtin.rs  defaults.rs  mod.rs  registry.rs
src/file/: config.rs  font.rs  loader.rs  midi.rs  mod.rs  wav.rs
src/mix/: base.rs  midi.rs  mod.rs  swap.rs
src/node/: log.rs  mod.rs
src/node/effect/: adsr.rs  async_receiver.rs  envelope.rs  fader.rs  filter.rs  lfo.rs  mod.rs  transition.rs
src/node/font/: mod.rs
src/node/generator/: mod.rs  noise.rs  null.rs  one_shot.rs  sawtooth.rs  square.rs  triangle.rs  wav.rs
src/node/group/: combiner.rs  font.rs  mixer.rs  mod.rs  util.rs  (+2 more)
src/process/: mod.rs
src/source/: async_receiver.rs  combiner.rs  dynamic_mixer.rs  envelope.rs  fader.rs  font.rs  log.rs  midi.rs  mixer.rs  mod.rs  noise.rs  null.rs  one_shot.rs  sawtooth.rs  square.rs  triangle.rs  util.rs  wav.rs
wasm/: Cargo.toml  index.html  index.js
wasm/src/: tests.rs
(+11 files in other folders)
