[package]
name = "midi-graph"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
midly = "0.5.3"
ron = "0.10"
serde = "1.0"
serde_derive = "1.0"
hound = "3.5.1"
soundfont = "0.1.0"
cpal = { version = "0.15.3", features = ["wasm-bindgen"] }
byteorder = "1.5.0"
crossbeam-channel = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.84"
